[package]
name = "transqsh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytesize = "1.3"
clap = { version = "4.5", features = ["derive"] }
ffmpeg-the-third = "2.0"
indicatif = { version = "0.17", features = ["rayon"] }
itertools = "0.13"
owo-colors = "4.1"
rayon = "1.8"
walkdir = "2.5"
